Issue #27	layout issues with new styles especially with iPhone viewports

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -30,13 +30,16 @@
 	background-color: #ddf;
 }
 
-.admin_card_item a {
+.admin_card_item h3 {
 	font-size: 1.2em;
 	font-weight: bold;
 	display:block;
+	margin:0;
+	color: #0099ff;
 }
 
 .admin_card_item p {
 	font-size: 0.8em;
 	margin: 0px;
+	color: black;
 }
