--- a/public/css/contenta-card.css
+++ b/public/css/contenta-card.css
@@ -1,7 +1,7 @@
 .card {
-	min-height:260px;
+	height:300px;
 	width: 100%;
-	margin: 20px 0px;
+	margin: 10px 0px;
 	padding: 4px;
 	vertical-align: top;
 	background-color: #eee;
@@ -70,6 +70,10 @@
 .card .caption:empty {
 	border-top-style: hidden;
 }
+.card .caption p {
+	margin-bottom: 0;
+}
+
 .card .caption p.description {
 	font-size: 0.75em;
 	max-height : 100px;
